<resources>
    <string name="app_name">Book Store</string>
    <string name="action_delete_all_entries">Clear Book Database</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>
    <string name="empty_view_title_text">No book in inventory</string>
    <string name="empty_view_subtitle_text">Get started by adding a book</string>
    <string name="editor_activity_title_new_book">Add a Book</string>
    <string name="editor_activity_title_edit_book">Edit Book</string>
    <string name="editor_insert_book_successful">Book saved</string>
    <string name="editor_insert_book_failed">Error with saving book</string>
    <string name="editor_update_book_successful">Book updated</string>
    <string name="editor_update_book_failed">Error with updating book</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_delete_book_successful">Book deleted</string>
    <string name="editor_delete_book_failed">Error with deleting book</string>
    <string name="delete_dialog_msg">Delete this book?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="category_title">Title</string>
    <string name="hint_title">Book Title</string>
    <string name="category_author">Author</string>
    <string name="hint_author">Author\'s Name</string>
    <string name="category_price">Price</string>
    <string name="unit_book_price">USD</string>
    <string name="category_quantity">Quantity</string>
    <string name="unit_quantity">pcs</string>
    <string name="category_supplier_name">Supplier Name</string>
    <string name="category_supplier_phone_number">Supplier Phone</string>
    <string name="button_sale_text">Sale</string>
    <string name="editor_quantity_inc_dec_null_toast">Please enter quantity manually by typing or using increment-decrement buttons!</string>
    <string name="editor_quantity_must_be_positive">Quantity must be greater than 0!</string>
    <string name="editor_input_correct_info_toast_msg">Please input all fields appropriately.</string>
    <string name="editor_null_input_title">Please enter the book\'s title.</string>
    <string name="editor_null_input_author">Please enter the book\'s author name.</string>
    <string name="editor_null_input_price">Please enter the book\'s price.</string>
    <string name="editor_null_input_quantity">Please enter the book\'s quantity.</string>
    <string name="editor_null_input_supplier_name">Please enter the supplier\'s name.</string>
    <string name="editor_null_input_supplier_phone">Please enter the supplier\'s contact.</string>
</resources>
