<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools   "
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <LinearLayout
        android:id="@+id/container_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/category_title"
            style="@style/CategoryStyle"/>

        <EditText
            android:id="@+id/edit_book_name"
            android:hint="@string/hint_title"
            android:inputType="textCapWords"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="@dimen/small_padding"
            style="@style/EditorFieldStyle"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/category_author"
            style="@style/CategoryStyle"/>

        <EditText
            android:id="@+id/edit_book_author"
            android:hint="@string/hint_author"
            android:inputType="textCapWords"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="@dimen/small_padding"
            style="@style/EditorFieldStyle"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/category_price"
            style="@style/CategoryStyle"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_book_price"
                android:inputType="number"
                style="@style/EditorFieldStyle"/>

            <TextView
                android:id="@+id/label_price_units"
                android:text="@string/unit_book_price"
                style="@style/EditorUnitsStyle"/>
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/category_quantity"
            style="@style/CategoryStyle"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_book_quantity"
                android:inputType="number"
                style="@style/EditorFieldStyle"/>

            <TextView
                android:id="@+id/label_quantity_units"
                android:text="@string/unit_quantity"
                style="@style/EditorUnitsStyle"/>
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_supplier_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/category_supplier_name"
            style="@style/CategoryStyle"/>

        <EditText
            android:id="@+id/edit_supplier_name"
            android:inputType="textCapWords"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="@dimen/small_padding"
            style="@style/EditorFieldStyle"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_supplier_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/category_supplier_phone_number"
            style="@style/CategoryStyle"/>

        <EditText
            android:id="@+id/edit_supplier_phone_number"
            android:inputType="number"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="@dimen/small_padding"
            style="@style/EditorFieldStyle"/>
    </LinearLayout>

</LinearLayout>
